# strava-cli

./: .gitignore  api.py  printer.py  pyproject.toml  readme.md  readme.txt  requirements.txt  setup.cfg  test_api.py  tox.ini
.github/workflows/: tests.yml
src/strava/: api.py  auth.py  main.py  models.py  printer.py
tests/: test_api.py
