[metadata]
name = strava
version = 0.1.0
description = strava api cli
authors = Atef Kai Benothman
license = MIT

[options]
packages = strava
package_dir = =src
python_requires = >= 3.8
zip_safe = no

[options.extras_require]
testing = 
  pytest>=7.0

[tool:pytest]
addopts = -v
testpaths = 
  tests

[flake8]
max-line-length = 160
indent-size = 2